--- a/public/assignment/form-fields.html
+++ b/public/assignment/form-fields.html
@@ -79,6 +79,10 @@
                             <a href="#">
                                 <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
                             </a>
+                            <a href="#">
+                                <span class="glyphicon glyphicon-align-justify" aria-hidden="true"></span>
+                            </a>
+
                         </div>
                     </form>
                 </div>
@@ -102,6 +106,10 @@
                             <a href="#">
                                 <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
                             </a>
+                            <a href="#">
+                                <span class="glyphicon glyphicon-align-justify" aria-hidden="true"></span>
+                            </a>
+
                         </div>
                     </form>
                 </div>
@@ -125,12 +133,16 @@
                             <a href="#">
                                 <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
                             </a>
+                            <a href="#">
+                                <span class="glyphicon glyphicon-align-justify" aria-hidden="true"></span>
+                            </a>
+
                         </div>
                     </form>
                 </div>
                 <div class="row">
                     <div class="col-xs-5">
-                        <label for="dropdownMenu1">Gender:</label>
+                        <label for="sel1">Gender:</label>
                     </div>
                 </div>
                 <div class="row">
@@ -138,15 +150,11 @@
                         <!--<div class="form-group col-xs-8">-->
                             <!---->
                         <!--</div>-->
-                        <div class="form-group dropdown col-xs-8">
-                            <button class="btn btn-default dropdown-toggle " type="button" id="dropdownMenu1"
-                                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-                                Male
-                                <span class="caret"></span>
-                            </button>
-                            <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-                                <li><a href="#">Female</a></li>
-                            </ul>
+                        <div class="form-group col-xs-8">
+                            <select class="form-control" id="sel1">
+                                <option>Male</option>
+                                <option>Female</option>
+                            </select>
                         </div>
                         <div class="col-xs-4">
                             <a href="#">
@@ -157,6 +165,94 @@
                             </a>
                             <a href="#">
                                 <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+                            </a>
+                            <a href="#">
+                                <span class="glyphicon glyphicon-align-justify" aria-hidden="true"></span>
+                            </a>
+
+                        </div>
+                    </form>
+                </div>
+                <div class="row">
+                    <div class="col-xs-5">
+                        <label for="chkbox1">Roles:</label>
+                    </div>
+                </div>
+                <div class="row">
+                    <form>
+                        <div class="form-group col-xs-8 checkbox chkbox1">
+                            <label><input type="checkbox" id="chkbox1">Admin</label>
+                        </div>
+                        <div class=" form-group col-xs-8 checkbox">
+                            <label><input type="checkbox" val="">Student</label>
+                        </div>
+                        <div class="form-group col-xs-8 checkbox">
+                            <label><input type="checkbox" value="">User</label>
+                        </div>
+                        <div class="col-xs-4 gly2">
+                            <a href="#">
+                                <span class=" edit-icon-lt glyphicon glyphicon-pencil" aria-hidden="true"></span>
+                            </a>
+                            <a href="#">
+                                <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+                            </a>
+                            <a href="#">
+                                <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+                            </a>
+                            <a href="#">
+                                <span class="glyphicon glyphicon-align-justify" aria-hidden="true"></span>
+                            </a>
+
+                        </div>
+                    </form>
+                </div>
+                <div class="row">
+                    <div class="col-xs-8">
+                        <label for="radio1">Licence Agreement:</label>
+                    </div>
+                </div>
+                <div class="row">
+                    <form>
+                        <div class="form-group col-xs-8 radio rad1">
+                            <label><input type="radio" name="optradio" id="radio1">Yes</label>
+                        </div>
+                        <div class="form-group col-xs-8 radio">
+                            <label><input type="radio" name="optradio">No</label>
+                        </div>
+
+                        <div class="col-xs-4 gly1">
+                            <a href="#">
+                                <span class=" edit-icon-lt glyphicon glyphicon-pencil" aria-hidden="true"></span>
+                            </a>
+                            <a href="#">
+                                <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+                            </a>
+                            <a href="#">
+                                <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+                            </a>
+                            <a href="#">
+                                <span class="glyphicon glyphicon-align-justify" aria-hidden="true"></span>
+                            </a>
+
+                        </div>
+                    </form>
+                </div>
+                <hr>
+                <div class="row">
+                    <div class="col-xs-6">
+                        <label for="sel2">Add New Field:</label>
+                    </div>
+                </div>
+                <div class="row">
+                    <form>
+                        <div class="form-group col-xs-8">
+                            <select class="form-control" id="sel2">
+                                <option>Single Line Text</option>
+                            </select>
+                        </div>
+                        <div class="col-xs-4">
+                            <a href="#">
+                                <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
                             </a>
                         </div>
                     </form>
