--- a/public/assignment/home.html
+++ b/public/assignment/home.html
@@ -5,7 +5,7 @@
     <!-- IE Edge Meta Tag -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!-- Viewport : This is for the display on smaller devices such as mobile, tab etc.-->
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <!-- Minified CSS through CDN-->
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
