--- a/public/assignment/form-fields.html
+++ b/public/assignment/form-fields.html
@@ -71,12 +71,12 @@
                     </div>
                 <div class="row">
                     <form>
-                        <div class="form-group col-xs-7">
+                        <div class="form-group col-xs-6 col-sm-7">
                             <input type="text" class="form-control" id="fname" placeholder="First Name">
                         </div>
-                        <div class="col-xs-5">
+                        <div class="col-xs-6 col-sm-5">
                             <a href="#">
-                                <span class=" edit-icon-lt glyphicon glyphicon-pencil" aria-hidden="true"></span>
+                                <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
                             </a>
                             <a href="#">
                                 <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
@@ -98,12 +98,12 @@
                 </div>
                 <div class="row">
                     <form>
-                        <div class="form-group col-xs-7">
+                        <div class="form-group col-xs-6 col-sm-7">
                             <input type="text" class="form-control" id="lname" placeholder="Last Name">
                         </div>
-                        <div class="col-xs-5">
+                        <div class="col-xs-6 col-sm-5">
                             <a href="#">
-                                <span class=" edit-icon-lt glyphicon glyphicon-pencil" aria-hidden="true"></span>
+                                <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
                             </a>
                             <a href="#">
                                 <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
@@ -125,12 +125,12 @@
                 </div>
                 <div class="row">
                     <form>
-                        <div class="form-group col-xs-7">
+                        <div class="form-group col-xs-6 col-sm-7">
                             <input type="date" class="form-control" id="dob" placeholder="Select Date">
                         </div>
-                        <div class="col-xs-5">
+                        <div class="col-xs-6 col-sm-5">
                             <a href="#">
-                                <span class=" edit-icon-lt glyphicon glyphicon-pencil" aria-hidden="true"></span>
+                                <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
                             </a>
                             <a href="#">
                                 <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
@@ -155,15 +155,15 @@
                         <!--<div class="form-group col-xs-8">-->
                             <!---->
                         <!--</div>-->
-                        <div class="form-group col-xs-7">
+                        <div class="form-group col-xs-6 col-sm-7">
                             <select class="form-control" id="sel1">
                                 <option>Male</option>
                                 <option>Female</option>
                             </select>
                         </div>
-                        <div class="col-xs-5">
+                        <div class="col-xs-6 col-sm-5">
                             <a href="#">
-                                <span class=" edit-icon-lt glyphicon glyphicon-pencil" aria-hidden="true"></span>
+                                <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
                             </a>
                             <a href="#">
                                 <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
@@ -185,18 +185,18 @@
                 </div>
                 <div class="row">
                     <form>
-                        <div class="form-group col-xs-7 checkbox chkbox1">
-                            <label><input type="checkbox" id="chkbox1">Admin</label>
+                        <div class="form-group col-xs-6 col-sm-7 chkbox1">
+                            <div class="checkbox"><label><input type="checkbox" id="chkbox1">Admin</label></div>
+                        <!--</div>-->
+                        <!--<div class=" form-group col-xs-6 col-sm-7 checkbox">-->
+                            <div class="checkbox"><label><input type="checkbox" val="">Student</label></div>
+                        <!--</div>-->
+                        <!--<div class="form-group col-xs-6 col-sm-7 checkbox">-->
+                            <div class="checkbox"><label><input type="checkbox" value="">User</label></div>
                         </div>
-                        <div class=" form-group col-xs-7 checkbox">
-                            <label><input type="checkbox" val="">Student</label>
-                        </div>
-                        <div class="form-group col-xs-7 checkbox">
-                            <label><input type="checkbox" value="">User</label>
-                        </div>
-                        <div class="col-xs-5 gly2">
+                        <div class="col-xs-6 col-sm-5">
                             <a href="#">
-                                <span class=" edit-icon-lt glyphicon glyphicon-pencil" aria-hidden="true"></span>
+                                <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
                             </a>
                             <a href="#">
                                 <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
@@ -218,16 +218,14 @@
                 </div>
                 <div class="row">
                     <form>
-                        <div class="form-group col-xs-7 radio rad1">
-                            <label><input type="radio" name="optradio" id="radio1">Yes</label>
-                        </div>
-                        <div class="form-group col-xs-7 radio">
-                            <label><input type="radio" name="optradio">No</label>
+                        <div class="col-xs-6 col-sm-7 form-group rad1">
+                            <div class="radio"><label><input type="radio" name="optradio" id="radio1">Yes</label></div>
+                            <div class="radio"><label><input type="radio" name="optradio">No</label></div>
                         </div>
 
-                        <div class="col-xs-5 gly1">
+                        <div class="col-xs-6 col-sm-5">
                             <a href="#">
-                                <span class=" edit-icon-lt glyphicon glyphicon-pencil" aria-hidden="true"></span>
+                                <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
                             </a>
                             <a href="#">
                                 <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
@@ -250,7 +248,7 @@
                 </div>
                 <div class="row">
                     <form>
-                        <div class="form-group col-xs-7">
+                        <div class="form-group col-xs-6 col-sm-7">
                             <select class="form-control" id="sel2">
                                 <option>Single Line Text</option>
                                 <option>Date</option>
@@ -260,7 +258,7 @@
                                 <option>Paragraph Text Field</option>
                             </select>
                         </div>
-                        <div class="col-xs-4">
+                        <div class="col-xs-6 col-sm-5">
                             <a href="#">
                                 <span class="glyphicon glyphicon-plus pad-left" aria-hidden="true"></span>
                             </a>
