--- a/public/assignment/admin.html
+++ b/public/assignment/admin.html
@@ -34,7 +34,7 @@
                 <!--<li><a href="login.html">Login</a></li>-->
                 <li><a href="#">Username</a></li>
                 <li><a href="#">Logout</a></li>
-                <li class="visible-xs"><a href="#">Home <span class="sr-only">(current)</span></a></li>
+                <li class="visible-xs"><a href="home.html">Home <span class="sr-only">(current)</span></a></li>
                 <li class="visible-xs"><a href="profile.html">profile</a></li>
                 <li class="active visible-xs"><a href="admin.html">Admin</a></li>
                 <li class="visible-xs"><a href="forms.html">Forms</a></li>
