--- a/public/assignment/home.html
+++ b/public/assignment/home.html
@@ -36,7 +36,7 @@
                 <li class="active visible-xs"><a href="#">Home <span class="sr-only">(current)</span></a></li>
                 <li class="visible-xs"><a href="profile.html">profile</a></li>
                 <li class="visible-xs"><a href="admin.html">Admin</a></li>
-                <li class="visible-xs"><a href="#">Forms</a></li>
+                <li class="visible-xs"><a href="forms.html">Forms</a></li>
             </ul>
             <!--<form class="navbar-form navbar-right">-->
                 <!--<input type="text" class="form-control" placeholder="Search...">-->
