--- a/public/assignment/form-fields.html
+++ b/public/assignment/form-fields.html
@@ -74,7 +74,7 @@
                         <div class="form-group col-xs-5 col-sm-7 p-left">
                             <input type="text" class="form-control" id="fname" placeholder="First Name">
                         </div>
-                        <div class="col-xs-7 col-sm-5">
+                        <div class="col-xs-7 col-sm-5 gly_center">
                             <a href="#">
                                 <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
                             </a>
@@ -101,7 +101,7 @@
                         <div class="form-group col-xs-5 col-sm-7 p-left">
                             <input type="text" class="form-control" id="lname" placeholder="Last Name">
                         </div>
-                        <div class="col-xs-7 col-sm-5">
+                        <div class="col-xs-7 col-sm-5 gly_center">
                             <a href="#">
                                 <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
                             </a>
@@ -128,7 +128,7 @@
                         <div class="form-group col-xs-5 col-sm-7 p-left">
                             <input type="date" class="form-control" id="dob" placeholder="Select Date">
                         </div>
-                        <div class="col-xs-7 col-sm-5">
+                        <div class="col-xs-7 col-sm-5 gly_center">
                             <a href="#">
                                 <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
                             </a>
@@ -158,7 +158,7 @@
                                 <option>Female</option>
                             </select>
                         </div>
-                        <div class="col-xs-7 col-sm-5">
+                        <div class="col-xs-7 col-sm-5 gly_center">
                             <a href="#">
                                 <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
                             </a>
@@ -187,7 +187,7 @@
                             <div class="checkbox"><label><input type="checkbox" val="">Student</label></div>
                             <div class="checkbox"><label><input type="checkbox" value="">User</label></div>
                         </div>
-                        <div class="col-xs-7 col-sm-5">
+                        <div class="col-xs-7 col-sm-5 gly_center">
                             <a href="#">
                                 <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
                             </a>
@@ -216,7 +216,7 @@
                             <div class="radio"><label><input type="radio" name="optradio">No</label></div>
                         </div>
 
-                        <div class="col-xs-7 col-sm-5">
+                        <div class="col-xs-7 col-sm-5 gly_center">
                             <a href="#">
                                 <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
                             </a>
@@ -251,9 +251,9 @@
                                 <option>Paragraph Text Field</option>
                             </select>
                         </div>
-                        <div class="col-xs-7 col-sm-5">
+                        <div class="col-xs-7 col-sm-5 gly_center">
                             <a href="#">
-                                <span class="glyphicon glyphicon-plus pad-left" aria-hidden="true"></span>
+                                <span class="glyphicon glyphicon-plus pad-right" aria-hidden="true"></span>
                             </a>
                         </div>
                     </form>
