--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,14 @@
     <!-- Minified CSS through CDN-->
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+    <link href="css/bootstrap-responsive.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Droid+Sans:400,700">
+    <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Droid+Serif">
+    <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Boogaloo">
+    <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Economica:700,400italic">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 
     <!-- Optional Theme
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
@@ -19,10 +25,11 @@
 </head>
 <body>
 
-<nav class="navbar navbar-default">
+<nav class="navbar navbar-default navbar-fixed-top">
     <div class="container">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+                <span class="sr-only">Toggle navigation</span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
@@ -40,47 +47,153 @@
 </nav>
 
 <div class="container-fluid bg-1 text-center">
-    <h3>Sanjiv Kumar</h3>
+    <h1>Sanjiv Kumar</h1>
     <img src="images/me.jpeg" class="img-circle img-responsive" style="display:inline" alt="Myself" width="250"
          height="250">
     <h3>Computer Science Graduate Student | Northeastern University</h3>
 </div>
 
-<div class="container-fluid bg-2 text-center">
-    <h3>About Me</h3>
-    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's
-        standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to
-        make a type specimen book</p>
+<!--<div class="container-fluid bg-2 text-center">-->
+    <!--<h3>About Me</h3>-->
+    <!--<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's-->
+        <!--standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to-->
+        <!--make a type specimen book</p>-->
+<!--</div>-->
+
+<!-- start: 2nd Page - Services -->
+<div id="services" class="color black">
+
+    <!--start: Container -->
+    <div class="container">
+
+        <!--start: Wrapper -->
+        <div class="wrapper span12">
+
+            <!-- start: Page Title -->
+            <div id="page-title">
+
+                <div id="page-title-inner">
+
+                    <h2><span>My Work</span></h2>
+
+                </div>
+
+            </div>
+            <!-- end: Page Title -->
+
+            <!-- start: Row -->
+            <div class="row-fluid">
+
+                <div class="span12">
+
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+                    </p>
+
+                </div>
+
+            </div>
+            <!-- end: Row -->
+
+            <!-- start: Row -->
+            <div class="row-fluid">
+
+                <!--<div class="span6">-->
+
+                    <!--<p>-->
+                        <!--Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.-->
+                    <!--</p>-->
+
+                <!--</div>-->
+
+                <!--<div class="span6">-->
+
+                    <!--<p>-->
+                        <!--Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.-->
+                    <!--</p>-->
+
+                <!--</div>-->
+
+            </div>
+            <!-- end: Row -->
+
+            <!-- start: Row -->
+            <div class="row-fluid">
+
+                <div class="span4">
+                    <div class="icons-box">
+                        <i class="fa fa-book fa-lg"></i>
+                        <h3>Assignment</h3>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+                        </p>
+                        <div class="clearfix"></div>
+                    </div>
+                </div>
+
+                <div class="span4">
+                    <div class="icons-box">
+                        <i class="fa fa-desktop fa-lg"></i>
+                        <h3>Project</h3>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+                        </p>
+                        <div class="clearfix"></div>
+                    </div>
+                </div>
+
+                <div class="span4">
+                    <div class="icons-box">
+                        <i class="fa fa-filter fa-lg"></i>
+                        <h3>Experiment</h3>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+                        </p>
+                        <div class="clearfix"></div>
+                    </div>
+                </div>
+
+            </div>
+            <!-- end: Row -->
+
+            <div class="clearfix"></div>
+            <hr class="clean">
+        </div>
+        <!-- end: Wrapper -->
+
+    </div>
+    <!--end: Container -->
+
 </div>
 
-<div class="container-fluid bg-3 text-center">
-    <h3>My Work</h3>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-        magna
-        aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-        consequat.</p>
-    <!--<a href="#" class="btn btn-default btn-lg"><span class="glyphicon glyphicon-search"></span>Search</a>-->
-    <div class="row">
-        <div class="col-sm-4">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna</p>
-            <img src="images/assgn.jpg" class="img-responsive" style="display:inline" alt="Myself" width="250"
-                 height="250">
-        </div>
-        <div class="col-sm-4">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna</p>
-            <img src="images/mean.png" class="img-responsive" style="display:inline" alt="Myself" width="250"
-                 height="250">
-        </div>
-        <div class="col-sm-4">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna</p>
-            <img src="images/exp.jpg" class="img-responsive" style="display:inline" alt="Myself" width="250"
-                 height="250">
-        </div>
-    </div>
-</div>
+<!--<div class="container-fluid bg-2 text-center">-->
+    <!--<h3>My Work</h3>-->
+    <!--<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore-->
+        <!--magna-->
+        <!--aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo-->
+        <!--consequat.</p>-->
+    <!--&lt;!&ndash;<a href="#" class="btn btn-default btn-lg"><span class="glyphicon glyphicon-search"></span>Search</a>&ndash;&gt;-->
+    <!--<div class="row">-->
+        <!--<div class="col-sm-4">-->
+            <!--<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et-->
+                <!--dolore magna</p>-->
+            <!--<img src="images/assgn.jpg" class="img-responsive" style="display:inline" alt="Myself" width="250"-->
+                 <!--height="250">-->
+        <!--</div>-->
+        <!--<div class="col-sm-4">-->
+            <!--<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et-->
+                <!--dolore magna</p>-->
+            <!--<img src="images/mean.png" class="img-responsive" style="display:inline" alt="Myself" width="250"-->
+                 <!--height="250">-->
+        <!--</div>-->
+        <!--<div class="col-sm-4">-->
+            <!--<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et-->
+                <!--dolore magna</p>-->
+            <!--<img src="images/exp.jpg" class="img-responsive" style="display:inline" alt="Myself" width="250"-->
+                 <!--height="250">-->
+        <!--</div>-->
+    <!--</div>-->
+<!--</div>-->
 
 <!--<footer class="container-fluid bg-4 text-center">-->
 <!--<p>Sanjiv Kumar 2016 | All Rights Reserved</p>-->
@@ -92,9 +205,9 @@
 <footer class="footer">
     <div class="container text-right">
         <!--<p>Sanjiv Kumar 2016 | All Rights Reserved</p>-->
-        <a href="#" target="_blank"><i class="fa fa-github"></i></a>
-        <a href="https://www.linkedin.com/in/esanjivkumar" target="_blank"><i class="fa fa-linkedin"></i></a>
-        <a href="mailto:mr.san.kumar@gmail.com" target="_blank"><i class="fa fa-envelope"></i></a>
+        <a href="#" target="_blank"><i class="fa fa-github fa-lg"></i></a>
+        <a href="https://www.linkedin.com/in/esanjivkumar" target="_blank"><i class="fa fa-linkedin fa-lg"></i></a>
+        <a href="mailto:mr.san.kumar@gmail.com" target="_blank"><i class="fa fa-envelope fa-lg"></i></a>
     </div><!--End container-->
 </footer><!--End footer 2-->
 
