--- a/public/experiments/foursquare-api/index.html
+++ b/public/experiments/foursquare-api/index.html
@@ -26,6 +26,6 @@
 
 <!-- Minified JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-<script src = "js/script.js"></script>
+<script src = "js/app.js"></script>
 </body>
 </html>
